Rectified QR Error

--- a/templates/core/official_dashboard.html
+++ b/templates/core/official_dashboard.html
@@ -62,14 +62,14 @@ document.addEventListener('DOMContentLoaded', () => {
 
     function showQrCodeModal(villageId) {
         const villagePhoneNumbers = {
-            'mawlynnong_meghalaya': ['+917010802567', '+918825930927','+919488355023','+919123547685','+917339246139','+917639222338'],
-            'ziro_arunachal': ['+917010802567', '+918825930927','+919488355023','+919123547685','+917339246139','+917639222338'],
-            'majuli_assam': ['+917010802567', '+918825930927','+919488355023','+919123547685','+917339246139','+917639222338'],
-            'khonoma_nagaland': ['+917010802567', '+918825930927','+919488355023','+919123547685','+917339246139','+917639222338'],
-            'moirang_manipur': ['+917010802567', '+918825930927','+919488355023','+919123547685','+917339246139','+917639222338'],
-            'pelling_sikkim': ['+917010802567', '+918825930927','+919488355023','+919123547685','+917339246139','+917639222338'],
-            'champhai_mizoram': ['+917010802567', '+918825930927','+919488355023','+919123547685','+917339246139','+917639222338'],
-            'unakoti_tripura': ['+917010802567', '+918825930927','+919488355023','+919123547685','+917339246139','+917639222338']
+            'mawlynnong_meghalaya': ['+917010802567', '+918825930927','+919488355023'],
+            'ziro_arunachal': ['+919123547685','+917339246139','+917639222338'],
+            'majuli_assam': ['+917010802567', '+918825930927','+919488355023'],
+            'khonoma_nagaland': ['+919123547685','+917339246139','+917639222338'],
+            'moirang_manipur': ['+917010802567', '+918825930927','+919488355023',],
+            'pelling_sikkim': ['+919123547685','+917339246139','+917639222338'],
+            'champhai_mizoram': ['+917010802567', '+918825930927','+919488355023'],
+            'unakoti_tripura': ['+919123547685','+917339246139','+917639222338']
         };
         const numbers = villagePhoneNumbers[villageId];
         if (!numbers || !Array.isArray(numbers) || numbers.length === 0) {
